--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 
 # code highlighter theme
 highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
-highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_dark: radical    # https://github.com/jwarby/jekyll-pygments-themes
 
 # repo color theme
 repo_theme_light: buefy       # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
-repo_theme_dark: radical      # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+repo_theme_dark: buefy      # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -48,7 +48,7 @@ navbar_fixed: false
 footer_fixed: true
 
 # Dimensions
-max_width: 700px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
