--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Galgano
 email: bgalgan1@jhu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-footer_text: 
+footer_text: testing footer text
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
