--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,65 +1,41 @@
-- title: General Information
-  type: map
-  contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: PhD in astronomy/astrophysics
+      institution: Johns Hopkins University, Baltimore, MD
+      year: 2025 (expected)
+
+    - title: MS in physics
+      institution: Fisk University, Nashville, TN
+      year: 2020
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Graduate Student Researcher
+      institution: Johns Hopkins University, Baltimore, MD
+      year: 2020 - present
+
+    - title: Research Intern
+      institution: Astrophysics Science Divison, NASA Goddard Space Flight Center
+      year: 2019
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        
+    - title: Graduate Student Researcher
+      institution: Dept. of Life & Physical Sciences, Fisk University
+      year: 2018 - 2020
       description:
         - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Description 2.    
+        
+    - title: Undergraduate student researcher
+      institution: Dept. of Physics & Astronomy, Vanderbilt University
+      year: 2015 - 2017
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Description 1.
+        - Description 2.        
 
 - title: Open Source Projects
   type: time_table
@@ -78,18 +54,6 @@
     - year: 2029
       items: 
         - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
 
 - title: Other Interests
   type: list
