--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: Brianna Galgano # the website title (if blank, full name will be used instead)
 first_name: Brianna
-middle_name: 
+middle_name:
 last_name: Galgano
 email: bgalgan1@jhu.edu
 description: # the ">" symbol means to ignore newlines until "footer_text:"
@@ -47,7 +47,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 800px
+max_width: 700px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -277,7 +277,7 @@ badges: # Display different badges for your pulications
 filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, selected, supp, blog, code, poster, slides, website, preview, altmetric]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
-max_author_limit:  # leave blank to always show all authors
+max_author_limit: 5 # leave blank to always show all authors
 more_authors_animation_delay: 10  # more authors are revealed on click using animation; smaller delay means faster animation
 
 
